[gd_scene load_steps=12 format=3 uid="uid://02wpfqfbw2y1"]

[ext_resource type="Texture2D" uid="uid://mh5v2hj72jpu" path="res://sprites/grid.png" id="1_boeh4"]
[ext_resource type="Script" uid="uid://bst2uquqsdogb" path="res://turrets/generic_turret.gd" id="1_cfr18"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cfr18"]
radius = 64.4981

[sub_resource type="AtlasTexture" id="AtlasTexture_cfr18"]
atlas = ExtResource("1_boeh4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f76v7"]
atlas = ExtResource("1_boeh4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m84is"]
atlas = ExtResource("1_boeh4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f02gx"]
atlas = ExtResource("1_boeh4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_goott"]
atlas = ExtResource("1_boeh4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjh8q"]
atlas = ExtResource("1_boeh4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_l4qv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfr18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f76v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m84is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f02gx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goott")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjh8q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f76v7"]
radius = 64.0

[node name="Area2D" type="Area2D"]
process_mode = 1
priority = 1
gravity_point = true
gravity = 60.0
linear_damp_space_override = 3
linear_damp = 1.0
script = ExtResource("1_cfr18")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
process_mode = 4
shape = SubResource("CircleShape2D_cfr18")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_l4qv0")
frame_progress = 0.261439

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
z_index = 1
color = Color(0, 1, 0, 0.235294)
polygon = PackedVector2Array(0, -64, 48, -48, 64, 0, 48, 48, 0, 64, -48, 48, -64, 0, -48, -48)

[node name="DamageArea2D" type="Area2D" parent="."]

[node name="DamageCollisionShape2D" type="CollisionShape2D" parent="DamageArea2D"]
shape = SubResource("CircleShape2D_f76v7")
debug_color = Color(0.97877, 0.0442085, 0.357028, 0.42)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="DamageArea2D" to="." method="_on_damage_area_2d_body_entered"]
